--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgada9dfb" class="outline-2">
-<h2 id="orgada9dfb">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orgada9dfb">
+<div id="outline-container-org740696d" class="outline-2">
+<h2 id="org740696d">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org740696d">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgbdd81b9" class="outline-3">
-<h3 id="orgbdd81b9">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgbdd81b9">
+<div id="outline-container-orgd4ff538" class="outline-3">
+<h3 id="orgd4ff538">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgd4ff538">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org2071e27" class="outline-4">
-<h4 id="org2071e27">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org2071e27">
+<div id="outline-container-org9716d22" class="outline-4">
+<h4 id="org9716d22">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org9716d22">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgfc65c20" class="outline-4">
-<h4 id="orgfc65c20">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgfc65c20">
+<div id="outline-container-orgc924d04" class="outline-4">
+<h4 id="orgc924d04">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgc924d04">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgca0da45" class="outline-3">
-<h3 id="orgca0da45">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgca0da45">
+<div id="outline-container-orge5b5434" class="outline-3">
+<h3 id="orge5b5434">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orge5b5434">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org0d0389b" class="outline-3">
-<h3 id="org0d0389b">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org0d0389b">
+<div id="outline-container-orgf2e2ecd" class="outline-3">
+<h3 id="orgf2e2ecd">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgf2e2ecd">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orgc571814" class="outline-3">
-<h3 id="orgc571814">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orgc571814">
+<div id="outline-container-org8c276b7" class="outline-3">
+<h3 id="org8c276b7">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org8c276b7">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org0dbdb3e" class="outline-3">
-<h3 id="org0dbdb3e">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org0dbdb3e">
+<div id="outline-container-orgc1d184a" class="outline-3">
+<h3 id="orgc1d184a">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orgc1d184a">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org4ebf7ed" class="outline-4">
-<h4 id="org4ebf7ed">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org4ebf7ed">
+<div id="outline-container-orgbb7111e" class="outline-4">
+<h4 id="orgbb7111e">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgbb7111e">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org6ee030f" class="outline-3">
-<h3 id="org6ee030f">Aliasing</h3>
-<div class="outline-text-3" id="text-org6ee030f">
+<div id="outline-container-orgb0739eb" class="outline-3">
+<h3 id="orgb0739eb">Aliasing</h3>
+<div class="outline-text-3" id="text-orgb0739eb">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org2f4be95" class="outline-3">
-<h3 id="org2f4be95">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org2f4be95">
+<div id="outline-container-org91c63ca" class="outline-3">
+<h3 id="org91c63ca">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org91c63ca">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
