--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org1ec998f" class="outline-2">
-<h2 id="org1ec998f">404 - page not found</h2>
-<div class="outline-text-2" id="text-org1ec998f">
+<div id="outline-container-org74bbc0a" class="outline-2">
+<h2 id="org74bbc0a">404 - page not found</h2>
+<div class="outline-text-2" id="text-org74bbc0a">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
