--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org0600b9c" class="outline-2">
-<h2 id="org0600b9c">How this blog works</h2>
-<div class="outline-text-2" id="text-org0600b9c">
+<div id="outline-container-org1665c86" class="outline-2">
+<h2 id="org1665c86">How this blog works</h2>
+<div class="outline-text-2" id="text-org1665c86">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org9361d9b" class="outline-3">
-<h3 id="org9361d9b">Org mode</h3>
-<div class="outline-text-3" id="text-org9361d9b">
+<div id="outline-container-org4027751" class="outline-3">
+<h3 id="org4027751">Org mode</h3>
+<div class="outline-text-3" id="text-org4027751">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-orgd117d5d" class="outline-3">
-<h3 id="orgd117d5d">Github pages</h3>
-<div class="outline-text-3" id="text-orgd117d5d">
+<div id="outline-container-org4a3e2ad" class="outline-3">
+<h3 id="org4a3e2ad">Github pages</h3>
+<div class="outline-text-3" id="text-org4a3e2ad">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgc1611c1" class="outline-3">
-<h3 id="orgc1611c1">Thanks</h3>
-<div class="outline-text-3" id="text-orgc1611c1">
+<div id="outline-container-org1f41b1b" class="outline-3">
+<h3 id="org1f41b1b">Thanks</h3>
+<div class="outline-text-3" id="text-org1f41b1b">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
