--- a/networking-in-lisp.html
+++ b/networking-in-lisp.html
@@ -16,23 +16,22 @@
 <a href="./index.html">home</a>
 </p>
 
-
-<div id="outline-container-org9deb6aa" class="outline-2">
-<h2 id="org9deb6aa">Look mum, no HTTP client!</h2>
-<div class="outline-text-2" id="text-org9deb6aa">
+<div id="outline-container-orgd9daabb" class="outline-2">
+<h2 id="orgd9daabb">Look mum, no HTTP client!</h2>
+<div class="outline-text-2" id="text-orgd9daabb">
 <p>
 Usually when you want to make an HTTP GET request in your favorite programming language you probably do something like import an HTTP library, make a client, call a GET method on that client and away we go. Just for fun, and to get more familiar with Common Lisp I figured I'd instead make a request from scratch. But, because of Sagan, apple pie and turtles all the way down, I won't be doing anything "from scratch". Instead we'll just be dipping one layer down.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgda9d887" class="outline-2">
-<h2 id="orgda9d887">Networking basics</h2>
-<div class="outline-text-2" id="text-orgda9d887">
+<div id="outline-container-org7c5f454" class="outline-2">
+<h2 id="org7c5f454">Networking basics</h2>
+<div class="outline-text-2" id="text-org7c5f454">
 </div>
-<div id="outline-container-org7b99d60" class="outline-3">
-<h3 id="org7b99d60">TCP/IP</h3>
-<div class="outline-text-3" id="text-org7b99d60">
+<div id="outline-container-orgf80f9fb" class="outline-3">
+<h3 id="orgf80f9fb">TCP/IP</h3>
+<div class="outline-text-3" id="text-orgf80f9fb">
 
 <div class="figure">
 <p><img src="images/http-layers.png" alt="http-layers.png" />
@@ -55,9 +54,9 @@ TCP ensures that internet applications can talk reliably to each other with erro
 </div>
 </div>
 
-<div id="outline-container-org41a312e" class="outline-3">
-<h3 id="org41a312e">Sockets</h3>
-<div class="outline-text-3" id="text-org41a312e">
+<div id="outline-container-org38ffb65" class="outline-3">
+<h3 id="org38ffb65">Sockets</h3>
+<div class="outline-text-3" id="text-org38ffb65">
 <p>
 Linux sockets are essentially file-like-things that represent network connections. They are identified by a combination of host and port-number. We can write to and read from a socket. Writes will be turned into packets and sent out. Addresses can be a an <code>IP address</code> or a <code>hostname</code>. In the latter case we perform a <code>DNS lookup</code> to get the <code>IP address</code> associated with the <code>hostname</code>.
 </p>
@@ -65,9 +64,9 @@ Linux sockets are essentially file-like-things that represent network connection
 </div>
 </div>
 
-<div id="outline-container-orgacfb2bd" class="outline-2">
-<h2 id="orgacfb2bd">Sockets in Common Lisp</h2>
-<div class="outline-text-2" id="text-orgacfb2bd">
+<div id="outline-container-org3bf0f11" class="outline-2">
+<h2 id="org3bf0f11">Sockets in Common Lisp</h2>
+<div class="outline-text-2" id="text-org3bf0f11">
 <p>
 To play around with sockets in common lisp we are going to use a package called <code>usocket</code>. Start up a REPL and load it up with Quicklisp. Let's set a variable to hold the host address. Initially we'll use the loopback interface (localhost) which is always at <code>127.0.0.1</code>.
 </p>
@@ -170,9 +169,9 @@ And that's it. Keep evaluating the read-line expression to read more lines from 
 </div>
 </div>
 
-<div id="outline-container-orgee4386d" class="outline-2">
-<h2 id="orgee4386d">Final notes</h2>
-<div class="outline-text-2" id="text-orgee4386d">
+<div id="outline-container-orgb8781b0" class="outline-2">
+<h2 id="orgb8781b0">Final notes</h2>
+<div class="outline-text-2" id="text-orgb8781b0">
 <ul class="org-ul">
 <li>The above uses plain HTTP. HTTPS adds a whole layer of complexity that is glossed over here.</li>
 <li>This method is just for fun and learning. If you are making something serious then you'll want to use a fully featured HTTP client library.</li>
