--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org4d83d9d" class="outline-2">
-<h2 id="org4d83d9d">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org4d83d9d">
+<div id="outline-container-org0a76028" class="outline-2">
+<h2 id="org0a76028">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org0a76028">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org4718b57" class="outline-3">
-<h3 id="org4718b57">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org4718b57">
+<div id="outline-container-orgd9f0768" class="outline-3">
+<h3 id="orgd9f0768">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgd9f0768">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgc616b29" class="outline-4">
-<h4 id="orgc616b29">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgc616b29">
+<div id="outline-container-org0180414" class="outline-4">
+<h4 id="org0180414">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org0180414">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org1d80e08" class="outline-4">
-<h4 id="org1d80e08">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org1d80e08">
+<div id="outline-container-orgb646e68" class="outline-4">
+<h4 id="orgb646e68">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-orgb646e68">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org3b9148a" class="outline-3">
-<h3 id="org3b9148a">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org3b9148a">
+<div id="outline-container-org93ebee4" class="outline-3">
+<h3 id="org93ebee4">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org93ebee4">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgb0a5383" class="outline-3">
-<h3 id="orgb0a5383">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgb0a5383">
+<div id="outline-container-orgbed0e77" class="outline-3">
+<h3 id="orgbed0e77">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgbed0e77">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-orgb289419" class="outline-3">
-<h3 id="orgb289419">SSB Modulation</h3>
-<div class="outline-text-3" id="text-orgb289419">
+<div id="outline-container-org285348f" class="outline-3">
+<h3 id="org285348f">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org285348f">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org9d3d3f0" class="outline-3">
-<h3 id="org9d3d3f0">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org9d3d3f0">
+<div id="outline-container-org0fa9e20" class="outline-3">
+<h3 id="org0fa9e20">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org0fa9e20">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgdb9f10d" class="outline-4">
-<h4 id="orgdb9f10d">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgdb9f10d">
+<div id="outline-container-org20a2f68" class="outline-4">
+<h4 id="org20a2f68">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org20a2f68">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-orgb964fe7" class="outline-3">
-<h3 id="orgb964fe7">Aliasing</h3>
-<div class="outline-text-3" id="text-orgb964fe7">
+<div id="outline-container-org5abe076" class="outline-3">
+<h3 id="org5abe076">Aliasing</h3>
+<div class="outline-text-3" id="text-org5abe076">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org63f1f4c" class="outline-3">
-<h3 id="org63f1f4c">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org63f1f4c">
+<div id="outline-container-org2e78618" class="outline-3">
+<h3 id="org2e78618">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org2e78618">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
